# hpy12c

./: CHANGELOG.md  LICENSE  Makefile  README.md  hpy12c.py  py12c.py  pyproject.toml  setup.py
tests/: conftest.py  test_fv.py  test_ipmt.py  test_irr.py  test_nper.py  test_npv.py  test_pmt.py  test_ppmt.py  test_pv.py  test_rate.py
